--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   
   <title>Frontend Mentor | Stats preview card component</title>
 
@@ -28,22 +28,13 @@
         </div>
 
       </div>
-    <div class="item2"><img class ="main-img" src="images/image-header-desktop.jpg" alt="image"></div>
+    <div class="item2"><img class ="main-img" src="image-header-desktop.jpg" alt="image"></div>
 
   </div>
 
-  <!-- Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries -->
-
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Aniket Pawar</a>.
   </div>
 </body>
 </html>
